--- a/print/texk/Makefile.in
+++ b/print/texk/Makefile.in
@@ -84,9 +84,11 @@ psmacrodir = $(texinputdir)/dvips
 default_bdpi = 300
 default_texsizes = @default_texsizes@
 
-# Where MakeTeXPK/MakeTeXTFM put PK/TFM files. Making these names include 
-# `pk' and `tfm' simplifies the default in kpathsea/paths.h[.in].
-# By default, MakeTeXPK/MakeTeXTFM appends /<mode> to this.
+# Where MakeTeXMF/PK/TFM put MF/PK/TFM files. Making these names include
+# `mf', `pk' and `tfm' simplifies the default in kpathsea/paths.h[.in].
+# By default, MakeTeXPK appends /<mode> to this (since it is
+# device-dependent).
+mtm_destdir = $(fontdir)/tmp/mf  
 mtp_destdir = $(fontdir)/tmp/pk
 mtt_destdir = $(fontdir)/tmp/tfm
 
@@ -138,6 +140,7 @@ makeargs = $(MFLAGS) CFLAGS='$(CFLAGS)' SHELL='$(SHELL)' \
   install_fonts=$(install_fonts) \
   ps_fontdir=$(ps_fontdir) bh_fontdir=$(bh_fontdir) \
   cg_fontdir=$(cg_fontdir) mt_fontdir=$(mt_fontdir) \
+  mtm_destdir=$(mtm_destdir) \
   mtp_destdir=$(mtp_destdir) mtt_destdir=$(mtt_destdir) \
   dvips_prefix=$(dvips_prefix) configdir=$(configdir) \
   headerdir=$(headerdir) psmacrodir=$(psmacrodir) \
