--- a/print/texk/web2c-6.1/dvipsk/Makefile.in
+++ b/print/texk/web2c-6.1/dvipsk/Makefile.in
@@ -89,9 +89,11 @@ default_mfmode = CanonCX
 # options
 default_lj = dvilj dvilj2 dvilj4
 
-# Where MakeTeXPK/MakeTeXTFM put PK/TFM files. Making these names include 
-# `pk' and `tfm' simplifies the default in kpathsea/paths.h[.in].
-# By default, MakeTeXPK/MakeTeXTFM appends /<mode> to this.
+# Where MakeTeXMF/PK/TFM put MF/PK/TFM files. Making these names include
+# `mf', `pk' and `tfm' simplifies the default in kpathsea/paths.h[.in].
+# By default, MakeTeXPK appends /<mode> to this (since it is
+# device-dependent).
+mtm_destdir = $(fontdir)/tmp/mf  
 mtp_destdir = $(fontdir)/tmp/pk
 mtt_destdir = $(fontdir)/tmp/tfm
 
