--- a/print/texk/web2c-6.1/makeindex/Makefile.in
+++ b/print/texk/web2c-6.1/makeindex/Makefile.in
@@ -89,10 +89,13 @@ default_mfmode = CanonCX
 # options
 default_lj = dvilj dvilj2 dvilj4
 
-# Where MakeTeXPK puts PK files. Making this name include `pk'
-# simplifies the default in kpathsea/paths.h[.in]. By default, MakeTeXPK
-# appends /<mode> to this.
+# Where MakeTeXMF/PK/TFM put MF/PK/TFM files. Making these names include
+# `mf', `pk' and `tfm' simplifies the default in kpathsea/paths.h[.in].
+# By default, MakeTeXPK appends /<mode> to this (since it is
+# device-dependent).
+mtm_destdir = $(fontdir)/tmp/mf  
 mtp_destdir = $(fontdir)/tmp/pk
+mtt_destdir = $(fontdir)/tmp/tfm
 
 # The installed name of the config file.
 configfile = config.ps
