--- a/print/texk/web2c-6.1/web2c/Makefile.in
+++ b/print/texk/web2c-6.1/web2c/Makefile.in
@@ -73,9 +73,11 @@ psmacrodir = $(texinputdir)/dvips
 default_bdpi = 300
 default_texsizes = @default_texsizes@
 
-# Where MakeTeXPK/MakeTeXTFM put PK/TFM files. Making these names include 
-# `pk' and `tfm' simplifies the default in kpathsea/paths.h[.in].
-# By default, MakeTeXPK/MakeTeXTFM appends /<mode> to this.
+# Where MakeTeXMF/PK/TFM put MF/PK/TFM files. Making these names include
+# `mf', `pk' and `tfm' simplifies the default in kpathsea/paths.h[.in].
+# By default, MakeTeXPK appends /<mode> to this (since it is
+# device-dependent).
+mtm_destdir = $(fontdir)/tmp/mf  
 mtp_destdir = $(fontdir)/tmp/pk
 mtt_destdir = $(fontdir)/tmp/tfm
 
@@ -179,6 +181,7 @@ makeargs=$(MFLAGS) SHELL='$(SHELL)' CC='$(CC)' CFLAGS='$(CFLAGS)'	\
   prefix=$(prefix) exec_prefix=$(exec_prefix)				\
   bindir=$(bindir) scriptdir=$(scriptdir)				\
   fontdir=$(fontdir)							\
+  mtm_destdir=$(mtm_destdir)						\
   mtt_destdir=$(mtt_destdir)						\
   install_sauter=$(install_sauter)					\
   sauterdir=$(sauterdir)						\
