Renamed pkg target from pcvt_kern to pcvt_bin, as suggested by Julian S., so automated Makefiles will have an easier job.

--- a/util/pcvt/Makefile
+++ b/util/pcvt/Makefile
@@ -7,4 +7,4 @@ clean:
 	@echo -n
 
 package:
-	pkg_create -c pkg/+DOC -d pkg/+DESC -f pkg/+PLIST pcvt_kern
+	pkg_create -c pkg/+DOC -d pkg/+DESC -f pkg/+PLIST pcvt_bin
