Make MakeTeXMF look in the right place for .mf output

--- a/print/texk/web2c-6.1/web2c/lib/MakeTeXMF.in
+++ b/print/texk/web2c-6.1/web2c/lib/MakeTeXMF.in
@@ -49,10 +49,8 @@ if test -d $sauterdir && test $mf = cmmf; then
   rootfont=`expr "$NAME" : '\([^0-9]*\)'`
   pointsize=`expr "$NAME" : '[^0-9]*\(.*\)'`
   make-mf $rootfont $pointsize >&2
-  echo "Running $mf \mode:=$MODE; mag:=1; scrollmode; input mf/$NAME" >&2
-  $mf "\mode:=$MODE; mag:=1; scrollmode; input mf/$NAME" </dev/null >&2
-  if test $? -eq 0 && test -r $MFNAME; then
-    mv $MFNAME $TEMPDIR
+  if test $? -eq 0 && test -r mf/$MFNAME; then
+    mv mf/$MFNAME $TEMPDIR
   fi
   rm -f $NAME.log
   cd $TEMPDIR
